--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,7 +53,7 @@ body
 
 #footer
 {
-    background: #37488b;
+    background: #1e2d69;
     color: white;
     text-align: center;
     padding: 0.5em;
